--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -82,6 +82,12 @@
   padding: 10px 10px;
   cursor: pointer;
   transition: 0.4s;
+
+}
+
+.btn-home2 a{
+   text-decoration: none;
+   
 }
 
 .btn-home2:hover {
