--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -17,7 +17,7 @@
   background: #fff;
   padding: 20px;
   border-radius: 16px;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 15px 30px rgb(0 0 0 / 27%);
   transition: 0.3s ease;
 
   height: 400px;
@@ -78,12 +78,16 @@
   gap: 6px;
 }
 
+.btn-hide{
+display: none;
+}
+
 .cImg {
   width: 100%;
   border-radius: 12px;
   margin-bottom: 15px;
 
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 15px rgb(0 0 0 / 35%);
   
 }
 
